# HW_Multithreading

Lesson 02/Task1/: main.cpp
Lesson 02/Task2/: CMakeLists.txt  main.cpp
Lesson 02/Task3/: CMakeLists.txt  main.cpp
Lesson 03/Task1/: CMakeLists.txt  main.cpp
Lesson 03/Task2/: CMakeLists.txt  main.cpp
Lesson 04/Task 1/: CMakeLists.txt  circle.cpp  circle.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  line.cpp  line.h  main.cpp  shape.cpp  shape.h  sqr.cpp  sqr.h  transform.cpp  transform.h
Lesson 05/Task 1/: Dockerfile  hello_docker.cpp
Lesson 05/Task 2/: Dockerfile  main.cpp
Task1/: CMakeLists.txt  main.cpp
Task2/: CMakeLists.txt  main.cpp
